# 5780_MiniProj_VisionArm

./: BoM.csv  CMakeLists.txt  README.md
master/: CMakeLists.txt
master/Inc/: gyro.h  hal_gpio.h  i2c_config.h  motor.h  stm32f0xx_it.h
master/Src/: gyro.c  hal_gpio.c  i2c_config.c  master.c  motor.c  stm32f0xx_it.c
slave/: CMakeLists.txt
slave/Inc/: main.h
slave/Src/: motor.c  slave.c
